EVA - 215 feat: Se agrega funcionalidad para eliminar reuniones.

--- a/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
+++ b/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
@@ -1,7 +1,6 @@
 {% load eva_tags %}
 {% load static %}
 <form id="juntas_form" method="post" class="needs-validation" novalidate>
-
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header p-b-0">
@@ -42,10 +41,14 @@
                     </div>
                 {% endif %}
                 <div class="modal-footer">
-                    <button data-dismiss="modal" class="btn btn-danger btn-pills">Cancelar</button>
-                    <button id="agregar" type="submit" class="btn btn-primary btn-pills"> {% if editar %}Editar{% else %}Agregar{% endif %} </button>
+                    <button data-dismiss="modal" class="btn btn-warning btn-pills">Cancelar</button>
+                    <button id="agregar_{{ reserva.id }}" type="submit" class="btn btn-primary btn-pills"> {% if editar %}Editar{% else %}Agregar{% endif %} </button>
+                {% if editar %}
+                    <a type="button" class="btn btn-danger btn-pills" id="eliminar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fEliminarReunion({{ reserva.id }}, true)" >Eliminar</a>
+                 {% endif %}
                 </div>
             </div>
         </div>
     </div>
 </form>
+
