EVA - 215 feat: Se implementa funcionalidad para editar eventos cuando se arrastran. - Al arrastrar el evento a otra posición en el calendario se muestra el modal de editar y se actualiza la fecha. - Cuando se da cancelar el calendario vuelve a quedar como estaba.

--- a/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
+++ b/Administracion/templates/Administracion/SalaJuntas/modal_crear_editar_reserva.html
@@ -41,7 +41,7 @@
                     </div>
                 {% endif %}
                 <div class="modal-footer">
-                    <button data-dismiss="modal" class="btn btn-warning btn-pills">Cancelar</button>
+                    <button data-dismiss="modal" class="btn btn-warning btn-pills " href="javascript:void(0);"  onclick="fbtnCancelar()">Cancelar</button>
                     <button id="agregar_{{ reserva.id }}" type="submit" class="btn btn-primary btn-pills"> {% if editar %}Editar{% else %}Agregar{% endif %} </button>
                 {% if editar %}
                     <a type="button" class="btn btn-danger btn-pills" id="eliminar_{{ reserva.id }}" href="javascript:void(0);"  onclick="fEliminarReunion({{ reserva.id }}, true)" >Eliminar</a>
