--- a/GestionActividades/templates/GestionActividades/Actividades/modal_crear_editar_actividades.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/modal_crear_editar_actividades.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            {% input_textarea_tag 'descripcion' 'Descripción de la actividad' placeholder="Ingrese una descripción" required="" maxlength="300" value=actividad.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                            {% input_textarea_tag 'descripcion' 'Descripción' placeholder="Ingrese una descripción" required="" maxlength="300" value=actividad.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
                         </div>
                     </div>
                     <div class="form-group">
@@ -49,17 +49,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                            <div class="col-md-12">
-                                {% select_tag grupos 'grupo_pertenece' 'Seleccione el grupo al que pertenece' texto_label="Seleccione un grupo"  value=actividad.grupo_actividad_id %}
-                            </div>
-                    </div>
-                    <input id="responsables_actividad"  hidden value="{{ responsable_actividad }}">
-                    {% if editar %}
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                {% select_tag estado 'estado' 'Seleccione el estado de la actividad' is_tupla=True texto_label="Seleccione un estado" required="" value=actividad.estado %}
-                            </div>
+                        <div class="col-md-12">
+                            {% select_tag grupos 'grupo_pertenece' 'Seleccione el grupo al que pertenece' texto_label="Seleccione un grupo"  value=actividad.grupo_actividad_id %}
                         </div>
+                    </div>
+                    {% if editar %}
+                        <input id="responsables_actividad"  hidden value="{{ responsable_actividad }}">
                         <div class="form-group">
                             <div id="motivo" class="col-md-12">
                                 {% input_textarea_tag 'motivo' 'Motivo' placeholder="Digite Motivo" value=actividad.motivo|default_if_none:"" required="" mensaje_validacion='Por favor digite el motivo.' %}
