--- a/GestionActividades/templates/GestionActividades/Actividades/modal_crear_editar_actividades.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/modal_crear_editar_actividades.html
@@ -1,12 +1,8 @@
 {% load eva_tags %}
 {% load static %}
-{% if editar %}
-<form action= "{% url 'GestionActividades:actividades-editar' actividad.id %}" id="actividad_form_editar" method="post" class="needs-validation" novalidate>
-{% else %}
-<form action= "{% url 'GestionActividades:actividades-crear' %}" id="actividad_form" method="post" class="needs-validation" novalidate>
-{% endif %}
+<form id="actividad_form" method="post" class="needs-validation" novalidate>
 {% csrf_token %}
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
@@ -19,51 +15,60 @@
             <div class="modal-body">
                 <div class="form-group">
                     <div class="form-group">
-                        <div class="col-md-12">
-                            {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese un nombre" required="" maxlength="100"  value=actividad.nombre mensaje_validacion='Por favor digite un nombre para el grupo' invalido=errores.nombre %}
+                        <div class="row">
+                            <div class="col-md-6">
+                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese un nombre" required="" maxlength="100"  value=actividad.nombre mensaje_validacion='Por favor digite un nombre para el grupo' invalido=errores.nombre %}
+                            </div>
+                            <div class="col-md-6">
+                                {% select_tag colaboradores 'supervisor_id' 'Seleccione un supervisor' texto_label="Supervisor" value=actividad.supervisor_id required="" invalido=errores.contrato mensaje_validacion='Por favor seleccione un contrato' %}
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-12">
-                            {% input_textarea_tag 'descripcion' 'Descripción' placeholder="Ingrese una descripción" required="" maxlength="300" value=actividad.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                        <div class="row">
+                            <div class="col-md-12">
+                                {% input_textarea_tag 'descripcion' 'Descripción' placeholder="Ingrese una descripción" required="" maxlength="300" value=actividad.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-12">
-                            {% select_tag colaboradores 'supervisor_id' 'Seleccione un supervisor' texto_label="Supervisor" value=actividad.supervisor_id required="" invalido=errores.contrato mensaje_validacion='Por favor seleccione un contrato' %}
+                        <div class="row">
+                            <div class="col-md-12">
+                                {% select_multiple_tag colaboradores 'responsables_id[]' 'responsables_id' 'Seleccione responsables' texto_label="Responsables" value="" required=""  mensaje_validacion='Por favor seleccione un responsable' multiple='multiple' invalido=errores.responsables%}
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-12">
-                            {% select_multiple_tag colaboradores 'responsables_id[]' 'responsables_id' 'Seleccione responsables' texto_label="Responsables" value="" required=""  mensaje_validacion='Por favor seleccione un responsable' multiple='multiple' invalido=errores.responsables%}
-                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                {% input_date_tag 'fecha_inicio' 'Fecha de inicio' placeholder="Seleccione una fecha de inicio" value=actividad.fecha_inicio required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de inicio.' %}
+                            </div>
+                            <div id="fecha_final_mostrar" class="col-md-6">
+                                {% input_date_tag 'fecha_final' 'Fecha de Fin' placeholder="Seleccione una fecha fin" value=actividad.fecha_fin required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
+                            </div>
+                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-12">
-                            {% input_date_tag 'fecha_inicio' 'Fecha de inicio' placeholder="Seleccione una fecha de inicio" value=actividad.fecha_inicio required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de inicio.' %}
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div id="fecha_final_mostrar" class="col-md-12">
-                            {% input_date_tag 'fecha_final' 'Fecha de Fin' placeholder="Seleccione una fecha fin" value=actividad.fecha_fin required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha final.' %}
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            {% select_tag grupos 'grupo_pertenece' 'Seleccione el grupo al que pertenece' texto_label="Seleccione un grupo"  value=actividad.grupo_actividad_id %}
+                        <div class="row">
+                            <div class="col-md-8">
+                                {% select_tag grupos 'grupo_pertenece' 'Seleccione el grupo al que pertenece' texto_label="Seleccione un grupo"  value=actividad.grupo_actividad_id %}
+                            </div>
+                            <div class="col-md-4">
+                                <label for="soporte_requerido"></label>
+                                {% input_checkbox_tag 'soporte_requerido' 'Requiere Soportes' value=actividad.soporte_requerido  %}
+                            </div>
                         </div>
                     </div>
                     {% if editar %}
                         <input id="responsables_actividad"  hidden value="{{ responsable_actividad }}">
                         <div class="form-group">
-                            <div id="motivo" class="col-md-12">
-                                {% input_textarea_tag 'motivo' 'Motivo' placeholder="Digite Motivo" value=actividad.motivo|default_if_none:"" required="" mensaje_validacion='Por favor digite el motivo.' %}
+                            <div class="row">
+                                <div id="motivo" class="col-md-12">
+                                    {% input_textarea_tag 'motivo' 'Motivo' placeholder="Digite Motivo" value=actividad.motivo|default_if_none:"" required="" mensaje_validacion='Por favor digite el motivo.' %}
+                                </div>
                             </div>
                         </div>
                     {% endif %}
-                    <div class="col-md-12">
-                        {% input_checkbox_tag 'soporte_requerido' 'Requiere Soportes' value=actividad.soporte_requerido  %}
-                    </div>
                 </div>
             </div>
             <div class="modal-footer">
