--- a/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
+++ b/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="col-xl-4">
-    <div id="c_{{ id_grupo }}" class="card border shadow-0 mb-g shadow-sm-hover" data-filter-tags="{{ nombre | lower }}">
+    <div id="c_{{ id_grupo }}" class="card border shadow-0 mb-g shadow-sm-hover" data-filter-tags="{{ nombre | lower }}{{ proceso | lower }}{{ contrato | lower }}">
         <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
             <div class="d-flex flex-row align-items-center">
                 <div class="info-card-text flex-1">
