--- a/GestionActividades/templates/GestionActividades/Actividades/modal_crear_editar_actividades.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/modal_crear_editar_actividades.html
@@ -51,7 +51,7 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-8">
-                                {% select_tag grupos 'grupo_pertenece' 'Seleccione el grupo al que pertenece' texto_label="Seleccione un grupo"  value=actividad.grupo_actividad_id %}
+                                {% select_tag grupos 'grupo_asociado' 'Seleccione el grupo asociado' texto_label="Seleccione un grupo"  value=actividad.grupo_actividad_id %}
                             </div>
                             <div class="col-md-4">
                                 <label for="soporte_requerido"></label>
