--- a/GestionActividades/templates/GestionActividades/GrupoActividades/modal_crear_editar_grupos_actividades.html
+++ b/GestionActividades/templates/GestionActividades/GrupoActividades/modal_crear_editar_grupos_actividades.html
@@ -1,10 +1,6 @@
 {% load eva_tags %}
 {% load static %}
-{% if editar %}
-<form action= "{% url 'GestionActividades:grupo-actividades-editar' grupo_actividad.id %}" id="grupo_actividad_form_editar" method="post" class="needs-validation" novalidate>
-{% else %}
-<form action= "{% url 'GestionActividades:grupo-actividades-crear' %}" id="grupo_actividad_form" method="post" class="needs-validation" novalidate>
-{% endif %}
+<form id="grupo_actividad_form" method="post" class="needs-validation" novalidate>
     {% csrf_token %}
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -46,7 +42,7 @@
                     </div>
                     <div class="form-group">
                             <div class="col-md-12">
-                                {% select_tag grupos 'grupo_pertenece' 'Seleccione el grupo al que pertenece' texto_label="Seleccione un grupo"  value=grupo_actividad.grupo_actividad_id %}
+                                {% select_tag grupos 'grupo_asociado' 'Seleccione el grupo asociado' texto_label="Seleccione un grupo"  value=grupo_actividad.grupo_actividad_id %}
                             </div>
                     </div>
                     {% if editar %}
