--- a/GestionActividades/templates/GestionActividades/GrupoActividades/modal_crear_editar_grupos_actividades.html
+++ b/GestionActividades/templates/GestionActividades/GrupoActividades/modal_crear_editar_grupos_actividades.html
@@ -24,21 +24,16 @@
                             {% input_textarea_tag 'descripcion' 'Descripción del grupo' placeholder="Ingrese una descripción" required="" maxlength="300" value=grupo_actividad.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            {% select_tag tipo_asociado 'tipo_asociado' 'Seleccione un Asociado' value=grupo_actividad.tipo_asociado texto_label="Asociado a: " required="" mensaje_validacion='Por favor seleccione un tipo de asociado' invalido=errores.tipo_asociado %}
-                        </div>
-                    </div>
                     <p class="mb-2">Aplica a:</p>
-                <div class="form-group">
-                    <div class="contenedor-con-borde">
-                        <div class="form-row">
-                            <div class="col-md-12">
-                                {% input_select_radio_tag 'tipo_asociado_radio' '' opciones=opciones_contrato_proceso value=grupo_actividad.tipo_asociado required="" mensaje_validacion='Por favor seleccione un tipo de asociado' %}
+                    <div class="form-group">
+                        <div class="contenedor-con-borde">
+                            <div class="form-row">
+                                <div class="col-md-12">
+                                    {% input_select_radio_tag 'tipo_asociado' '' opciones=opciones_contrato_proceso value=grupo_actividad.tipo_asociado required="" mensaje_validacion='Por favor seleccione un tipo de asociado' %}
+                                </div>
                             </div>
                         </div>
                     </div>
-                 </div>
                     <div class="form-group">
                         <div id=contrato_mostrar_id style="display: none" class="col-md-12">
                             {% select_tag contratos 'contrato_id' 'Seleccione un contrato' texto_label="Contrato" value=grupo_actividad.contrato_id invalido=errores.contrato mensaje_validacion='Por favor seleccione un contrato' %}
