--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoRequerimientos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoRequerimientos/index.html
@@ -1,7 +1,7 @@
 {% extends 'GestionDocumental/_common/base_gestion_documental.html' %}
 {% load static %}
 {% load eva_tags %}
-<title>{% block titulo %}Consecutivo de Contratos{% endblock %}</title>
+<title>{% block titulo %}Consecutivo de requerimiento interno {% endblock %}</title>
 {% block styles %}
     {% include 'EVA/_common/_statics/_tablas.html' with incCSS=True %}
     {% include 'EVA/_common/_statics/_select2.html' with incCSS=True %}
@@ -13,7 +13,7 @@
     <div class="panel-container show">
             <div class="header">
                  <h1 class="header-title">
-                    <i class='fad fa-file-alt'></i> Consecutivo de Requerimiento Interno <span class='fw-300'></span>
+                    <i class='fad fa-file-alt'></i> Consecutivo de requerimiento interno <span class='fw-300'></span>
                      <br>
                      <br>
                  </h1>
@@ -23,7 +23,7 @@
                     <div id="panel-1" class="panel">
 
                         <div class="panel-hdr">
-                            {% if perms.GestionDocumental.add_consecutivooficio %}
+                            {% if perms.GestionDocumental.add_consecutivorequerimientos %}
                             <div class="col-md-10">
                                 <small>
                                     <a class="fad fa-3x fad fa-plus-circle" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-requerimientos-crear'%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar consecutivo de Oficio"></a>
@@ -75,7 +75,6 @@
                                                             {% endif %}
                                                         </td>
                                                         <td>{{ consecutivo.detalle}}</td>
-                                                        <td>{{ consecutivo.destinatario }}</td>
                                                         <td>{{ consecutivo.usuario.username }}</td>
                                                         <td>{% if consecutivo.justificacion %}{{ consecutivo.justificacion }}{% endif %}</td>
                                                         <td>
@@ -86,10 +85,10 @@
                                                             {% endif %}
                                                         </td>
                                                         <td>
-                                                            {% if perms.GestionDocumental.editar_consecutivocontrato and consecutivo.estado %}
+                                                            {% if perms.GestionDocumental.change_consecutivorequerimientos and consecutivo.estado %}
                                                               <a class="fad fa-2x fa-file-edit" id="editar_{{ consecutivo.id }}" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-requerimientos-editar' consecutivo.id%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
                                                             {% endif %}
-                                                            {% if perms.GestionDocumental.delete_consecutivooficio and consecutivo.estado %}
+                                                            {% if perms.GestionDocumental.delete_consecutivorequerimientos and consecutivo.estado %}
                                                               <a class="fad fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ consecutivo.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ consecutivo.id }}, true)" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                             {% endif %}
                                                         </td>
@@ -107,7 +106,7 @@
                 </div>
             </div>
     </div>
-    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='gestion-documental/consecutivo-oficios' %}
+    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='gestion-documental/consecutivo-requerimientos' %}
      <div class="modal fade" tabindex="-1" id="crear-crequerimiento" role="dialog"  aria-hidden="true"></div>
 
 {% endblock %}
