--- a/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
+++ b/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
@@ -12,7 +12,10 @@
                     {% if perms.GestionActividades.view_grupoactividades %}
                         <div class="dropdown-menu">
                             {% if perms.GestionActividades.change_grupoactividades %}
-                            <a class="dropdown-item" href="javascript:abrirModalCrearGrupoActividad('{% url 'GestionActividades:grupo-actividades-editar' grupo_actividad.id%}', '{{ asociado }}')">Editar</a>
+                                <a class="dropdown-item" href="javascript:abrirModalCrearGrupoActividad('{% url 'GestionActividades:grupo-actividades-editar' grupo_actividad.id%}', '{{ asociado }}')">Editar</a>
+                            {% endif %}
+                            {% if perms.GestionActividades.view_grupoactividades %}
+                                <a class="dropdown-item" href="{% url 'GestionActividades:actividades-index' id_grupo%}">Detalle</a>
                             {% endif %}
                         </div>
                     {% endif %}
@@ -22,14 +25,29 @@
         </div>
         <div class="card-body p-0 collapse show">
             <div class="p-3">
+                <div class="form-row">
+                    <a  class="mt-0 d-block fs-sm fw-400 text-dark">
+                        <i class="fas fa-battery-half text-muted mr-2"> Progreso</i></a>
+                    <div class="col-12 col-md-6 hidden-md-down">
+                        <div class="p-3 p-md-1">
+                            <div class="d-flex align-items-center">
+                                <div class="flex-1 min-width-0">
+                                    <a href="javascript:void(0)" class="d-block text-truncate">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width:{{ progreso }}%;" aria-valuenow="{{ progreso }}" aria-valuemin="0" aria-valuemax="100">{{ progreso }}%</div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <a  class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <i class="fas fa-battery-half text-muted mr-2"> Progreso</i> {{telefono}} </a>
-                <a  class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <i class="fas fa-users text-muted mr-2"> Responsables </i> {{telefono}}</a>
+                    <i class="fas fa-users text-muted mr-2"> Responsables </i> {{responsables}}</a>
                 <a class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <i class="fas fa-calendar-check text-muted mr-2"> Número Actividades </i> {{identificacion}}</a>
+                    <i class="fas fa-calendar-check text-muted mr-2"> Número Actividades </i> {{actividades}}</a>
                 <a class="mt-1 d-block fs-sm fw-400 text-dark">
-                    <i class="fas fa-calendar-times text-muted mr-2"> Actividades Pendientes</i> {{correo }}</a>
+                    <i class="fas fa-calendar-times text-muted mr-2"> Actividades Pendientes</i> {{actividades_pendientes}}</a>
             </div>
         </div>
     </div>
