--- a/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
+++ b/GestionActividades/templates/GestionActividades/_common/_tarjeta_grupo_actividad.html
@@ -26,10 +26,10 @@
         <div class="card-body p-0 collapse show">
             <div class="p-3">
                 <div class="form-row">
-                    <a  class="mt-0 d-block fs-sm fw-400 text-dark">
+                    <a  class="mt-0 p-1 d-block fs-sm fw-400 text-dark">
                         <i class="fas fa-battery-half text-muted mr-2"> Progreso</i></a>
                     <div class="col-12 col-md-6 hidden-md-down">
-                        <div class="p-3 p-md-1">
+                        <div class="p-3 p-md-2">
                             <div class="d-flex align-items-center">
                                 <div class="flex-1 min-width-0">
                                     <a href="javascript:void(0)" class="d-block text-truncate">
