--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoRequerimientos/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoRequerimientos/_modal_crear_editar_consecutivo.html
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
-                    {% if editar %}Editar Consecutivo de requerimiento interno: {{ consecutivo.codigo }}{% else %}Crear Consecutivos de requerimiento interno{% endif %}
+                    {% if editar %}Editar consecutivo de requerimiento interno: {{ consecutivo.codigo }}{% else %}Crear consecutivo de requerimiento interno {% endif %}
                 </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                         <div class="col-md-12">
-                            {% input_textarea_tag 'detalle' 'Descripción del Documento' placeholder="Ingrese una descripción" required="" maxlength="300" value=consecutivo.detalle mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                            {% input_textarea_tag 'descripcion' 'Descripción del Documento' placeholder="Ingrese una descripción" required="" maxlength="300" value=consecutivo.detalle mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
                         </div>
                 </div>
                 {% if editar %}
