--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoPlanTrabajo/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoPlanTrabajo/index.html
@@ -23,10 +23,10 @@
                     <div id="panel-1" class="panel">
 
                         <div class="panel-hdr">
-                            {% if perms.GestionDocumental.add_consecutivorequerimientos %}
+                            {% if perms.GestionDocumental.add_consecutivoplandetrabajo %}
                             <div class="col-md-10">
                                 <small>
-                                    <a class="fad fa-3x fad fa-plus-circle" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-requerimientos-crear'%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar consecutivo de Oficio"></a>
+                                    <a class="fad fa-3x fad fa-plus-circle" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-plantrabajo-crear'%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar consecutivo de Oficio"></a>
                                 </small>
                             </div>
                             {% else %}
@@ -35,7 +35,7 @@
                             <div class="col-md-2" style="float: right" >
                                 {% select_tag opciones_filtro 'filtro_consecutivos' '' value=id_filtro  %}
                             </div>
-                            <input id="ruta_filtro_consecutivos" hidden value="/gestion-documental/consecutivo-requerimientos/">
+                            <input id="ruta_filtro_consecutivos" hidden value="/gestion-documental/consecutivo-plantrabajo/">
                         </div>
                         <div class="panel-container show">
                             <div class="panel-content">
@@ -43,7 +43,7 @@
                                     <div class="panel-body">
 
                                         {% include 'EVA/_common/_busqueda_paginacion.html' %}
-                                        <table class="table table-bordered w-100" id="dataTable">
+                                        <table class="table table-bordered w-100 table-sm" id="dataTable">
                                             <thead class="bg-primary-600">
                                                 <tr>
                                                     <th data-priority="1" >Código</th>
@@ -63,7 +63,7 @@
                                                         <td><span id="copiar_{{ consecutivo.id }}">{{ consecutivo.codigo }}</span>
                                                             <span><a class="fad fa-copy" href="javascript:void(0);"  onclick="copiarAPortapapeles('{{ consecutivo.codigo }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Copiar"></a></span>
                                                         </td>
-                                                        <td>{{ consecutivo.fecha_crea | date:'Y-m-d H:i'}}</td>
+                                                        <td>{{ consecutivo.fecha_creacion | date:'Y-m-d H:i'}}</td>
                                                         <td>{% if consecutivo.contrato %}
                                                                 {{ consecutivo.contrato}} - {{ consecutivo.contrato.cliente }}
                                                             {% else %}
@@ -85,10 +85,10 @@
                                                             {% endif %}
                                                         </td>
                                                         <td>
-                                                            {% if perms.GestionDocumental.change_consecutivorequerimientos and consecutivo.estado %}
-                                                              <a class="fad fa-2x fa-file-edit" id="editar_{{ consecutivo.id }}" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-requerimientos-editar' consecutivo.id%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                            {% if perms.GestionDocumental.change_consecutivoplandetrabajo and consecutivo.estado %}
+                                                              <a class="fad fa-2x fa-file-edit" id="editar_{{ consecutivo.id }}" href="javascript:abrirModalCrear('{% url 'GestionDocumental:consecutivo-plantrabajo-editar' consecutivo.id%}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
                                                             {% endif %}
-                                                            {% if perms.GestionDocumental.delete_consecutivorequerimientos and consecutivo.estado %}
+                                                            {% if perms.GestionDocumental.delete_consecutivoplandetrabajo and consecutivo.estado %}
                                                               <a class="fad fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ consecutivo.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ consecutivo.id }}, true)" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                             {% endif %}
                                                         </td>
